--- a/references.bib
+++ b/references.bib
@@ -139,3 +139,56 @@
   year={2010},
   publisher={Oxford University Press}
 }
+
+@article{pathwaycommons,
+  title={Pathway Commons 2019 Update: integration, analysis and exploration of pathway data},
+  author={Rodchenkov, Igor and Babur, Ozgun and Luna, Augustin and Aksoy, Bulent Arman and Wong, Jeffrey V and Fong, Dylan and Franz, Max and Siper, Metin Can and Cheung, Manfred and Wrana, Michael and others},
+  journal={Nucleic acids research},
+  volume={48},
+  number={D1},
+  pages={D489--D497},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{string,
+  title={STRING v11: protein--protein association networks with increased coverage, supporting functional discovery in genome-wide experimental datasets},
+  author={Szklarczyk, Damian and Gable, Annika L and Lyon, David and Junge, Alexander and Wyder, Stefan and Huerta-Cepas, Jaime and Simonovic, Milan and Doncheva, Nadezhda T and Morris, John H and Bork, Peer and others},
+  journal={Nucleic acids research},
+  volume={47},
+  number={D1},
+  pages={D607--D613},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@article{autoannotate,
+  title={AutoAnnotate: A Cytoscape app for summarizing networks with semantic annotations},
+  author={Kucera, Mike and Isserlin, Ruth and Arkhangorodsky, Arkady and Bader, Gary D},
+  journal={F1000Research},
+  volume={5},
+  year={2016},
+  publisher={Faculty of 1000 Ltd}
+}
+
+@article{clustermaker,
+  title={clusterMaker: a multi-algorithm clustering plugin for Cytoscape},
+  author={Morris, John H and Apeltsin, Leonard and Newman, Aaron M and Baumbach, Jan and Wittkop, Tobias and Su, Gang and Bader, Gary D and Ferrin, Thomas E},
+  journal={BMC bioinformatics},
+  volume={12},
+  number={1},
+  pages={436},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{wordcloud,
+  title={WordCloud: a Cytoscape plugin to create a visual semantic summary of networks},
+  author={Oesper, Layla and Merico, Daniele and Isserlin, Ruth and Bader, Gary D},
+  journal={Source code for biology and medicine},
+  volume={6},
+  number={1},
+  pages={7},
+  year={2011},
+  publisher={Springer}
+}
