--- a/references.bib
+++ b/references.bib
@@ -9,6 +9,28 @@
   url = {http://yihui.name/knitr/},
 }
 
+@article{gprofiler,
+  title={g: Profiler: a web server for functional enrichment analysis and conversions of gene lists (2019 update)},
+  author={Raudvere, Uku and Kolberg, Liis and Kuzmin, Ivan and Arak, Tambet and Adler, Priit and Peterson, Hedi and Vilo, Jaak},
+  journal={Nucleic acids research},
+  volume={47},
+  number={W1},
+  pages={W191--W198},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@article{gsea,
+  title={Gene set enrichment analysis: a knowledge-based approach for interpreting genome-wide expression profiles},
+  author={Subramanian, Aravind and Tamayo, Pablo and Mootha, Vamsi K and Mukherjee, Sayan and Ebert, Benjamin L and Gillette, Michael A and Paulovich, Amanda and Pomeroy, Scott L and Golub, Todd R and Lander, Eric S and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={102},
+  number={43},
+  pages={15545--15550},
+  year={2005},
+  publisher={National Acad Sciences}
+}
+
 @article{reactome,
   title={The reactome pathway knowledgebase},
   author={Fabregat, Antonio and Sidiropoulos, Konstantinos and Garapati, Phani and Gillespie, Marc and Hausmann, Kerstin and Haw, Robin and Jassal, Bijay and Jupe, Steven and Korninger, Florian and McKay, Sheldon and others},
